@@ -14,20 +14,20 @@ not run its Makefile.PL or Build.PL.
 -----BEGIN PGP SIGNED MESSAGE-----
 
 SHA1 f6faa7ce15f863934760762548a57c421d62720d BUGS
-SHA1 cc8996eb394db54b96249183e35258a8215cdca3 CHANGES
+SHA1 eaf3ed525134eaea8fa19af7ce0ba11d69f16242 CHANGES
 SHA1 20acec234ebbcf4fd9a89e5712e7a4db67ca36e0 CREDITS
 SHA1 1478a9491db7843cc30982149743f24b03c1900f INSTALL
 SHA1 d6a6c30ee6d9ba6b9afab8bbf6a25e1b23c744e0 LICENSE
 SHA1 f0ae27e8632a6b70ed583f509f0c374360270b61 MANIFEST
 SHA1 cd502fb699757e25cb0c76e5ae19218b717b7968 META.yml
 SHA1 31d67115fad4671e3b32a3fdeb8bfd900032823b Makefile.PL
-SHA1 f261ffc8ee34b9517970facc4e980bf6405b5555 NEW
+SHA1 2da197ff643e38c7356ac01f8bfc3f5bb3aad92d NEW
 SHA1 71aa07adda03523c48781ca46ecda9b6a9099e4f README
 SHA1 59e6bfe9b64c0792ab001f67a44b015c1503a2fa TODO
 SHA1 eafe439df1c73009221b7ab085ae425b64dc37b7 bench/size.pl
 SHA1 b412676bdbbeb19fbd598dc27277104daccb58d8 bench/str_cache.pl
-SHA1 c7f9e5016be3d80c84ffd1672d7020472a9e6dec lib/Math/String.pm
-SHA1 e6be696649b10817ab1168da8b918b0d8ee9e10f lib/Math/String/Charset.pm
+SHA1 5741f51389566005a07836e19dd64ef23b29b225 lib/Math/String.pm
+SHA1 fafcb11f5c1bea2e61c84a6c60c9ac00b574adeb lib/Math/String/Charset.pm
 SHA1 e360160c3bc69da0e8b10e7f0486b6cd9b558181 lib/Math/String/Charset/Grouped.pm
 SHA1 f174410d2577455e0f893948760fb60e47736240 lib/Math/String/Charset/Nested.pm
 SHA1 2e7826b4062059c422a6a6e49e7a2a5a5f130e89 lib/Math/String/Sequence.pm
@@ -40,11 +40,11 @@ SHA1 c72a656d3812edae252f657c14d305ff638e5da8 t/study.t
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.2.4 (GNU/Linux)
 
-iQEVAwUBQZ+J13cLPEOTuEwVAQHh6Af7Bn0Lq24ToSApzed9lFjk7PGjYa8BW1VW
-Dfy2is0S28kHjLFUvXKGVm8SsHFTJ5++5kYvANeDI4sH1ajLyU73N/WvIe9fCbSf
-D6j9rmitWXWwfixtHpQHCtwPLWCagioI96HAxUuuxm1MNgIrxdH9kgYiaLG5EztE
-A9+qwgtnY3F3Zg7HbKd1VDZXfuURxSQIhasdbEFfF80i0ITgY2folr3cBAAL9xXA
-aKIi6cGb23nWD9H6PB+Sxoe/9z1Q5pTOtsDAeXsO1o3wDX5bUvwTogDJPD5Fj3XW
-SrcUDScwkw7Ew16cUfG3bwTEaDN1WD8631WHuhyW6hoXrsuBTs8KJQ==
-=CE/W
+iQEVAwUBQZ+Xl3cLPEOTuEwVAQF7mgf9H4fhSxQ3aBptPx8/2qAHiPNULKnFTPM7
+hslbhEsGDfqlM0b8lD3SHj1L69EqZmyTP+J+xGQe/wpo1rM5r8pC3eG+zQTvkR6a
+ykvpP35aF2uPp5mb9iVtEZyfCExsTnjOdHp6vXRojxvxgEZeqd2t/4ll+mrNS3wB
+sBkScnPGKPZHtv/WKLQCkOXldjZFEzXrpJHh2bzK+AmEEWVvr09g5CAJ4Nn+hzWl
+zymn/lOudvv9eGNW0M8n/Y0f+XBwBjNUHqdtz8jTby5WuwCeC4sYyRJVuZwnuTGX
+Ro59dIMRsQaMFvNVeIqimrFYh7qiKQtTqTalG1V2l/+ml6OlX5vBZQ==
+=Ro+s
 -----END PGP SIGNATURE-----
